# divi

./: Cargo.toml  README.md  README.tpl
src/: divi.rs  main.rs  store.rs
