[package]
name = "divi-tool"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2018"
description = "Tool to download and normalize DIVI ITS register."
license = "MIT"
#documentation = "https://docs.rs/gv100ad"
homepage = "https://github.com/jgraef/divi"
repository = "https://github.com/jgraef/divi"

[badges]
maintenance = { status = "experimental" }

[dependencies]
color-eyre = "0.5"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
soup = "0.5"
futures = "0.3"
url = { version = "2.2", features = ["serde"] }
thiserror = "1.0"
pin-project = "1.0"
structopt = "0.3"
regex = "1.4"
